--- a/.github/pipline_pr.yml
+++ b/.github/pipline_pr.yml
@@ -1,31 +1,21 @@
-name: "units-test"
+name: Bump version
 on:
-  pull_request:
-    branches: master
-    types:
-      - closed
-
+  push:
+    branches:
+      - master
 jobs:
-  # test action works running from the graph
-  test:
-    if: github.event.pull_request.merged
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Set Version
-        id: version
-        run: |
-          echo "::set-output name=value::$( pwsh ./version-tool.ps1 next-version )"
-
-      - name: Create a tag
-        id: tag
-        uses: ./
+      - uses: actions/checkout@v2
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.NEW_GITHUB_TOKEN }}
-          message: ${{ github.ref }} merged and created ${{ steps.version.outputs.value }}
-          tag: v${{ steps.version.outputs.value }}
-
-      - name: Show Ref
-        run: |
-          echo "Created version ${{ steps.tag.outputs.ref }}"
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
